time and date of the future ride and the relevant time update
