# openapi.yaml
@@ -586,6 +586,13 @@ components:
           type: string
           format: date
           example: "2023-06-14"
+        pickupDateTime:
+          type: string
+          format: date-time
+          example: "2024-01-31T16:10:00Z" 
+        relevantTime:
+          type: integer
+          example: 3
         destinationArrivalTime:
           type: number
           nullable: true
